# Montador-LigadorSB

./: CMakeLists.txt  README.md  TabelaDiretivas.txt  TabelaInstrucoes.txt  analisador sintatico.cpp  analisadorLexico.cpp  fat_mod_B.asm  ligador.cpp  main.cpp  montador.cpp  montador.h  preprocessado.pre  preprocessador.cpp  preprocessador.h  preprocessando.pre  saida.e  triangulo.asm
